@@ -5,6 +5,7 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
@@ -17,79 +18,105 @@ import com.fasterxml.jackson.databind.ObjectMapper;
  */
 public class ExternalServiceClient {
 
-    private static final String HOSPITAL_BASE_URL = "http://localhost:8000/api";
-    private static final String PHARMACY_BASE_URL = "http://localhost:8082/api";
-    private static final String INSURANCE_BASE_URL = "http://localhost:8080/api/pharmacy-insurance";
+    // URLs configurables desde variables de entorno (inyectables para pruebas)
+    private final String hospitalBaseUrl;
+    private final String pharmacyBaseUrl;
+    private final String insuranceBaseUrl;
     private static final int TIMEOUT = 10000; // 10 segundos
     private static final ExecutorService executor = Executors.newFixedThreadPool(5);
     private static final ObjectMapper mapper = new ObjectMapper();
+
+    /**
+     * Constructor por defecto: lee URLs base desde variables de entorno o usa valores locales.
+     */
+    public ExternalServiceClient() {
+        this.hospitalBaseUrl = System.getenv("HOSPITAL_API_URL") != null
+                ? System.getenv("HOSPITAL_API_URL") : "http://localhost:8000/api";
+        this.pharmacyBaseUrl = System.getenv("PHARM_BACKEND_API_URL") != null
+                ? System.getenv("PHARM_BACKEND_API_URL") : "http://localhost:8082/api";
+        this.insuranceBaseUrl = System.getenv("ENS_BACKEND_API_URL") != null
+                ? System.getenv("ENS_BACKEND_API_URL") + "/pharmacy-insurance"
+                : "http://localhost:8080/api/pharmacy-insurance";
+    }
+
+    /**
+     * Constructor alterno para inyectar URLs base (útil en pruebas con puertos efímeros).
+     */
+    public ExternalServiceClient(String hospitalBaseUrl, String pharmacyBaseUrl, String insuranceBaseUrl) {
+        this.hospitalBaseUrl = hospitalBaseUrl;
+        this.pharmacyBaseUrl = pharmacyBaseUrl;
+        this.insuranceBaseUrl = insuranceBaseUrl;
+    }
 
     /**
      * Realiza una petición GET a un servicio externo
      */
     public String get(String serviceType, String endpoint) throws IOException {
         String baseUrl = getBaseUrl(serviceType);
-        URL url = new URL(baseUrl + endpoint);
-        
+        URI uri = URI.create(baseUrl + endpoint);
+        URL url = uri.toURL();
+
         HttpURLConnection connection = (HttpURLConnection) url.openConnection();
         connection.setRequestMethod("GET");
         connection.setConnectTimeout(TIMEOUT);
         connection.setReadTimeout(TIMEOUT);
-        
+
         return handleResponse(connection);
     }
-    
+
     /**
      * Realiza una petición POST a un servicio externo
      */
     public String post(String serviceType, String endpoint, Object data) throws IOException {
         String baseUrl = getBaseUrl(serviceType);
-        URL url = new URL(baseUrl + endpoint);
-        
+        URI uri = URI.create(baseUrl + endpoint);
+        URL url = uri.toURL();
+
         HttpURLConnection connection = (HttpURLConnection) url.openConnection();
         connection.setRequestMethod("POST");
         connection.setRequestProperty("Content-Type", "application/json");
         connection.setConnectTimeout(TIMEOUT);
         connection.setReadTimeout(TIMEOUT);
         connection.setDoOutput(true);
-        
+
         String jsonData = mapper.writeValueAsString(data);
-        
+
         try (OutputStream os = connection.getOutputStream()) {
-            byte[] input = jsonData.getBytes("utf-8");
+            byte[] input = jsonData.getBytes(java.nio.charset.StandardCharsets.UTF_8);
             os.write(input, 0, input.length);
         }
-        
+
         return handleResponse(connection);
     }
-    
+
     /**
      * Realiza una petición PUT a un servicio externo
      */
     public String put(String serviceType, String endpoint, Object requestBody) throws IOException {
         String baseUrl = getBaseUrl(serviceType);
-        URL url = new URL(baseUrl + endpoint);
-        
+        URI uri = URI.create(baseUrl + endpoint);
+        URL url = uri.toURL();
+
         HttpURLConnection connection = (HttpURLConnection) url.openConnection();
         connection.setRequestMethod("PUT");
         connection.setRequestProperty("Content-Type", "application/json");
         connection.setConnectTimeout(TIMEOUT);
         connection.setReadTimeout(TIMEOUT);
         connection.setDoOutput(true);
-        
+
         // Convertir objeto a JSON si no es null
         if (requestBody != null) {
             String jsonBody = mapper.writeValueAsString(requestBody);
-            
+
             try (OutputStream os = connection.getOutputStream()) {
-                byte[] input = jsonBody.getBytes("utf-8");
+                byte[] input = jsonBody.getBytes(java.nio.charset.StandardCharsets.UTF_8);
                 os.write(input, 0, input.length);
             }
         }
-        
+
         return handleResponse(connection);
     }
-    
+
     /**
      * Realiza una petición GET asíncrona
      */
@@ -102,7 +129,7 @@ public class ExternalServiceClient {
             }
         }, executor);
     }
-    
+
     /**
      * Realiza una petición POST asíncrona
      */
@@ -115,7 +142,7 @@ public class ExternalServiceClient {
             }
         }, executor);
     }
-    
+
     /**
      * Realiza una petición PUT asíncrona
      */
@@ -128,32 +155,32 @@ public class ExternalServiceClient {
             }
         }, executor);
     }
-    
+
     /**
      * Obtiene la URL base según el tipo de servicio
      */
     private String getBaseUrl(String serviceType) {
         switch (serviceType.toUpperCase()) {
             case "HOSPITAL":
-                return HOSPITAL_BASE_URL;
+                return hospitalBaseUrl;
             case "PHARMACY":
-                return PHARMACY_BASE_URL;
+                return pharmacyBaseUrl;
             case "INSURANCE":
-                return INSURANCE_BASE_URL;
+                return insuranceBaseUrl;
             default:
                 throw new IllegalArgumentException("Tipo de servicio no válido: " + serviceType);
         }
     }
-    
+
     /**
      * Maneja la respuesta HTTP
      */
     private String handleResponse(HttpURLConnection connection) throws IOException {
         int responseCode = connection.getResponseCode();
-        
+
         try (BufferedReader br = new BufferedReader(
-                 new InputStreamReader(responseCode >= 200 && responseCode < 300 ? 
-                         connection.getInputStream() : connection.getErrorStream()))) {
+                new InputStreamReader(responseCode >= 200 && responseCode < 300
+                        ? connection.getInputStream() : connection.getErrorStream()))) {
             StringBuilder response = new StringBuilder();
             String responseLine;
             while ((responseLine = br.readLine()) != null) {
@@ -162,4 +189,4 @@ public class ExternalServiceClient {
             return response.toString();
         }
     }
-} 
+}
